Letter card and Word display functionality done

--- a/src/component/Letter/Letter.css
+++ b/src/component/Letter/Letter.css
@@ -1,8 +1,22 @@
 .card {
+  padding: 15px;
+  margin: 10px;
+  background-color: peachpuff;
+  border-radius: 15px;
+}
+
+.flexContainer {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 15px;
-  margin: 10px;
-  background-color: aqua;
+  flex-direction: column;
+}
+
+ul {
+  margin: 5px;
+  padding: 5px;
+}
+
+.word {
+  font-size: 25px;
 }
